--- a/style.css
+++ b/style.css
@@ -9,16 +9,20 @@ html {
 }
 
 :root {
-	--primary-color: #87CEEB;
+	--primary-color: #;
 	--secondary-color: #4e5494;
+}
+
+html {
+	height: 100%;
+	background-color: blue; /* Set the background color of the entire page */
 }
 
 body {
 	height: 100%;
-	/* background-color: var(--primary-color); */
 	background: linear-gradient(
 		45deg,
-		var(--primary-color),
+		blue,  /* Change primary color to blue */
 		var(--secondary-color)
 	);
 	font-family: "Poppins", sans-serif;
@@ -27,6 +31,7 @@ body {
 	background-attachment: fixed;
 	position: relative;
 }
+
 
 header {
 	padding: 0.5rem;
